tests/NormalTests/paczka1/small_fuzzy/17160904.err
Error in line 1: A436 A710 2,9
Error in line 10: FwHxL9T S246 36,17
